[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.5.16"
hyper={version = "0.14.20", features = ["full"]}
tokio={version = "1.21.2", features = ["full"]}
tower="0.4.13"
mime="0.3.16"
serde={version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
tracing="0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
anyhow="1.0.65"
thiserror="1.0.37"